[gd_scene load_steps=35 format=3 uid="uid://c08cradw387yd"]

[ext_resource type="Script" path="res://Scenes/Units/Lizards/boss_unit.gd" id="1_2cth8"]
[ext_resource type="PackedScene" uid="uid://gvm3kmour2fr" path="res://Scenes/Abilities/mini_missile_strike.tscn" id="2_0jf57"]
[ext_resource type="Texture2D" uid="uid://bhfd70qtmfoem" path="res://Sprites/Units/Lizards/BossLizard/BossDeath.png" id="3_y4gs5"]
[ext_resource type="Texture2D" uid="uid://cdtm87uomhaof" path="res://Sprites/Units/Lizards/BossLizard/BossMeleAttack.png" id="4_g5qrt"]
[ext_resource type="Texture2D" uid="uid://bx0dw6hnsiise" path="res://Sprites/Units/Lizards/BossLizard/BossRangeAttack.png" id="5_fbhnl"]
[ext_resource type="Texture2D" uid="uid://knot0abcglsl" path="res://Sprites/Units/Lizards/BossLizard/BossWalk.png" id="6_7atpm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gekne"]
atlas = ExtResource("3_y4gs5")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxm5s"]
atlas = ExtResource("3_y4gs5")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_evm77"]
atlas = ExtResource("3_y4gs5")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3cwh"]
atlas = ExtResource("3_y4gs5")
region = Rect2(3072, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_okp8o"]
atlas = ExtResource("3_y4gs5")
region = Rect2(4096, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_am0c8"]
atlas = ExtResource("3_y4gs5")
region = Rect2(5120, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrejl"]
atlas = ExtResource("4_g5qrt")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_54xv6"]
atlas = ExtResource("4_g5qrt")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvlwf"]
atlas = ExtResource("4_g5qrt")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfu6c"]
atlas = ExtResource("4_g5qrt")
region = Rect2(3072, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_do78u"]
atlas = ExtResource("5_fbhnl")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_hycr5"]
atlas = ExtResource("5_fbhnl")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_j74e7"]
atlas = ExtResource("5_fbhnl")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1lfr"]
atlas = ExtResource("5_fbhnl")
region = Rect2(3072, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvex7"]
atlas = ExtResource("5_fbhnl")
region = Rect2(4096, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_nopfo"]
atlas = ExtResource("5_fbhnl")
region = Rect2(5120, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nsv1"]
atlas = ExtResource("5_fbhnl")
region = Rect2(6144, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6ror"]
atlas = ExtResource("6_7atpm")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_au3oo"]
atlas = ExtResource("6_7atpm")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxdhn"]
atlas = ExtResource("6_7atpm")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ej8e"]
atlas = ExtResource("6_7atpm")
region = Rect2(3072, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_soaw4"]
atlas = ExtResource("6_7atpm")
region = Rect2(4096, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_mncha"]
atlas = ExtResource("6_7atpm")
region = Rect2(5120, 0, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_vq0xk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gekne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxm5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evm77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3cwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okp8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am0c8")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrejl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54xv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvlwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfu6c")
}],
"loop": true,
"name": &"mele_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_do78u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hycr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j74e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1lfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvex7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nopfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nsv1")
}],
"loop": false,
"name": &"range_attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6ror")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au3oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxdhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ej8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soaw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mncha")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3cw4"]
size = Vector2(794.625, 362)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrfj6"]
size = Vector2(20, 358)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5jua"]
size = Vector2(24.5, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4rhj"]
size = Vector2(25, 363)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_2cth8")
miniMissle = ExtResource("2_0jf57")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -97)
scale = Vector2(0.378, 0.378)
sprite_frames = SubResource("SpriteFrames_vq0xk")
animation = &"mele_attack"

[node name="MissileRangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Range" type="CollisionShape2D" parent="MissileRangeArea"]
position = Vector2(-397.688, 12)
shape = SubResource("RectangleShape2D_c3cw4")

[node name="RangeArea" type="Area2D" parent="."]
collision_mask = 4

[node name="Range" type="CollisionShape2D" parent="RangeArea"]
position = Vector2(-12, 12)
shape = SubResource("RectangleShape2D_rrfj6")

[node name="HitboxArea" type="Area2D" parent="."]
collision_layer = 2

[node name="HITBOX" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(12, 12.5)
shape = SubResource("RectangleShape2D_q5jua")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12.5, 12.5)
shape = SubResource("RectangleShape2D_t4rhj")

[node name="MissileDamageTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="MissileRangeArea" to="." method="_on_missile_range_area_body_entered"]
[connection signal="body_exited" from="MissileRangeArea" to="." method="_on_missile_range_area_body_exited"]
[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
[connection signal="area_entered" from="HitboxArea" to="." method="_on_hitbox_area_area_entered"]
[connection signal="area_exited" from="HitboxArea" to="." method="_on_hitbox_area_area_exited"]
[connection signal="timeout" from="MissileDamageTimer" to="." method="_on_missile_damage_timer_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
